Added log and pass form

--- a/HW/L1/InputWeb/InputWeb/html/index.html
+++ b/HW/L1/InputWeb/InputWeb/html/index.html
@@ -5,6 +5,11 @@
     <title>Login</title>
 </head>
 <body>
-
+    <h2>Login</h2>
+    <form method="post" action="postuser">
+        <p>Login: <input name="login" /></p>
+        <p>Password: <input name="password" /></p>
+        <input type="submit" value="Send"/>
+    </form>
 </body>
 </html>
